spacing fixed

--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -1,5 +1,5 @@
 header{
-    height: 100px;
+    height: 80px;
     /* top tells how far the margin is from its container */
     top: 0;
     width: 100%;
@@ -10,12 +10,16 @@ header{
     margin: 0;
 }
 img{
-    height: 100px;
+    max-height: 80px;
     margin: 0;
 }
 body{
     margin-top: 110px;
     background-color: rgb(41, 92, 8);
+}
+.display{
+    max-width: 50%;
+    text-align: center;
 }
 .flexbox-container{
     display: flex;
@@ -23,4 +27,64 @@ body{
     justify-content: space-around;
     align-content: center;
     align-items: center;
+}
+.hide{
+    background-image: url('../images/cardbackred.png');
+    background-size: cover;
+}
+.score-board{
+    max-width: 33%;
+}
+.card{
+    height: 120px;
+    min-width: 80px;
+    border: 2px solid black;
+    margin: 10px;
+    background-color: white;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+.slide-in-tl {
+	-webkit-animation: slide-in-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@media only screen and (max-width: 600px){
+    .card{
+        max-width: 40%;
+    }
+}
+/* ----------------------------------------------
+ * Generated by Animista on 2018-5-13 0:37:26
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation slide-in-tl
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-in-tl {
+  0% {
+    -webkit-transform: translateY(-1000px) translateX(-1000px);
+            transform: translateY(-1000px) translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0) translateX(0);
+            transform: translateY(0) translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-tl {
+  0% {
+    -webkit-transform: translateY(-1000px) translateX(-1000px);
+            transform: translateY(-1000px) translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0) translateX(0);
+            transform: translateY(0) translateX(0);
+    opacity: 1;
+  }
 }
